# fa-users-auth-template

./: .env.template  .gitignore  README.md  pyproject.toml
src/: bootstrap.py  main.py  middleware.py  router.py  settings.py
src/apps/auth/: depends.py  enums.py  exceptions.py  router.py
src/apps/auth/repositories/: auth_tokens.py  permissions.py
src/apps/auth/schemas/: credentials.py  rbac.py  tokens.py
src/apps/auth/services/: jwt_service.py  security.py
src/apps/auth/tools/: bearer.py  cookie_token.py  deps.py  jwts.py  rbac.py
src/apps/auth/use_cases/: login.py  logout.py  refresh.py  register.py
src/apps/healthcheck/: router.py
src/apps/references/: depends.py  repository.py  router.py  schemas.py
src/apps/users/: depends.py  router.py
src/apps/users/repositories/: users.py
src/apps/users/schemas/: users.py
src/apps/users/services/: users.py
src/apps/users/use_cases/: user_info.py
src/core/: exceptions.py  schemas.py  utils.py
src/core/database/: __init__.py  db_provider.py
src/core/models/: __init__.py  auth_token.py  base.py  rbac.py  references.py  roles.py  users.py  users_roles.py
src/core/repositories/: cache_repository.py  db_repository.py
src/tools/database/: loaddata.py
