[project]
name = "fa-users-auth-template"
version = "0.1.0"
requires-python = ">=3.13"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
fastapi = {extras = ["standard"], version = "^0.115.12"}
pydantic = "^2.11.5"
pydantic-settings = "^2.9.1"
sqlalchemy = "^2.0.41"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
bcrypt = "^4.3.0"
asyncpg = "^0.30.0"
alembic = "^1.16.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"
httpx = "^0.28.1"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-vvv"
testpaths = "tests"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
